[package]
name = "pime"
version = "0.1.0"
edition = "2021"

no-entrypoint = []
test-sbf = [] # Wraps all tests under cargo test-sbf

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
  'cfg(feature, values("custom-heap", "custom-panic"))',
  'cfg(target_os, values("solana"))',
]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = "0.9.2"
pinocchio-log = "0.5.1"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.4.0"
pinocchio-token = "0.4.0"
pinocchio-associated-token-account = "0.2.0"

[dev-dependencies]
bincode = "2.0.1"
solana-system-interface = { version = "3.0.0", features = ["bincode"] }
litesvm = "0.8.2"
solana-sdk = "3.0.0"
spl-token-interface = "2.0.0"
spl-associated-token-account-interface = "2.0.0"
